# lava_engine

./: .gitignore  CMakeLists.txt  Test.cpp  imgui.ini
assets/shaders/compiled/compute/: assemble_ssao.json  disassemble_depth.json
assets/shaders/compiled/fragment/: blur.json  deferred.json  equi_to_cube.json  hdr.json  irradiance.json  main.json  point_light.json  prefiltered.json  shadow.json  skylight.json  ssao.json  upsample.json
assets/shaders/compiled/vertex/: cubemap.json  deferred.json  point_light.json  shadow.json  skylight.json  triangle.json
assets/shaders/metal/compiled/compute/: assemble_ssao.air  assemble_ssao.metallib  disassemble_depth.air  disassemble_depth.metallib
assets/shaders/metal/compiled/fragment/: blur.air  blur.metallib  deferred.air  deferred.metallib  downsample.air  downsample.metallib  equi_to_cube.air  equi_to_cube.metallib  hdr.air  hdr.metallib  irradiance.air  irradiance.metallib  main.air  main.metallib  point_light.air  point_light.metallib  prefiltered.air  prefiltered.metallib  shadow.air  shadow.metallib  skylight.air  skylight.metallib  ssao.air  ssao.metallib  upsample.air  upsample.metallib
assets/shaders/metal/compiled/vertex/: cubemap.air  cubemap.metallib  deferred.air  deferred.metallib  point_light.air  point_light.metallib  shadow.air  shadow.metallib  skylight.air  skylight.metallib  triangle.air  triangle.metallib
assets/shaders/metal/source/compute/: assemble_ssao.metal  disassemble_depth.metal
assets/shaders/metal/source/fragment/: blur.metal  deferred.metal  downsample.metal  equi_to_cube.metal  hdr.metal  irradiance.metal  main.metal  point_light.metal  prefiltered.metal  skylight.metal  ssao.metal  upsample.metal
assets/shaders/metal/source/vertex/: cubemap.metal  deferred.metal  point_light.metal  shadow.metal  skylight.metal  triangle.metal
assets/shaders/opengl/source/compute/: assemble_ssao.glsl  disassemble_depth.glsl
assets/shaders/opengl/source/fragment/: blur.glsl  deferred.glsl  downsample.glsl  equi_to_cube.glsl  hdr.glsl  irradiance.glsl  main.glsl  point_light.glsl  prefiltered.glsl  shadow.glsl  skylight.glsl  ssao.glsl  upsample.glsl
assets/shaders/opengl/source/vertex/: cubemap.glsl  deferred.glsl  point_light.glsl  shadow.glsl  skylight.glsl  triangle.glsl
assets/shaders/shader_bundles/compute/: disassemble_depth.json
assets/shaders/shader_bundles/fragment/: blur.json  deferred.json  downsample.json  equi_to_cube.json  hdr.json  irradiance.json  main.json  point_light.json  prefiltered.json  skylight.json  ssao.json
assets/shaders/shader_bundles/vertex/: cubemap.json  deferred.json  point_light.json  shadow.json  skylight.json
assets/shaders/source/compute/: assemble_ssao.comp  disassemble_depth.comp
assets/shaders/source/fragment/: deferred.frag  downsample.frag  equi_to_cube.frag  main.frag  skylight.frag  ssao.frag  upsample.frag
assets/shaders/source/vertex/: cubemap.vert  deferred.vert  triangle.vert
assets/shaders/vulkan/compiled/compute/: assemble_ssao.spv  disassemble_depth.spv
assets/shaders/vulkan/compiled/fragment/: blur.spv  deferred.spv  downsample.spv  equi_to_cube.spv  hdr.spv  irradiance.spv  main.spv  point_light.spv  prefiltered.spv  skylight.spv  ssao.spv  upsample.spv
assets/shaders/vulkan/compiled/vertex/: cubemap.spv  deferred.spv  point_light.spv  shadow.spv  skylight.spv  triangle.spv
assets/shaders/vulkan/source/compute/: assemble_ssao.comp  disassemble_depth.comp
assets/shaders/vulkan/source/fragment/: blur.frag  deferred.frag  downsample.frag  equi_to_cube.frag  hdr.frag  irradiance.frag  main.frag  point_light.frag  prefiltered.frag  skylight.frag  ssao.frag  upsample.frag
assets/shaders/vulkan/source/utility/: utility.glsl
assets/shaders/vulkan/source/vertex/: deferred.vert  point_light.vert  shadow.vert  skylight.vert  triangle.vert
data/: open_data.json
src/: lava_system.hpp  main.cpp
src/editor/: editor.cpp  editor.hpp
src/math/: math.cpp
src/scene/: game.cpp  game.hpp  scene.cpp  scene.hpp
unused/: brdf.frag
